04. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- display archive contents at commwidget in better formated way
	- commwidget space issuses fixes
	- repaint commwidget only if nessary
	- qtlogo on tool button and menu entry fixed
	- category display at commwidget fixed

03. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- scanning archve files on subfolder fixed (#3484430)

29. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- wrong disable of fileinfo if readmp3 info is disabled fixed
	- comment missing from results page when searching fixed (#3480282)
	- displaying multiline comments correctly in search result list
	- tb size unit display at search dialog added
	- mediainfo/lib7zip build fixes
	- typo fixed
	- display supported archive extensions if lib7zip is disabled fixed
	- display header line for archive contents in commwidget
	- display lib7zip state more informative
	- comment resize fix
	- compile fix for broken osx
	- wrong characters reset fixed
	- typo on archive header line at commwidget fixed
	- version increased to 1.6

28. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- content at comment widget display fix
	- made lib7zip optional (thanks to eduard bloch)
	- use pkgconfig info for mediainfo (thanks to eduard bloch)
	- define for mediainfo unicode added (thanks to eduard bloch)
	- security hardening flags added (thanks to eduard bloch)
	- flag for mediainfo static renamed from MEDIAINFO_LIBARY to MEDIAINFO_STATIC
	- string fixes (thanks to eduard bloch)
	- numeric overflow fixes (thanks to eduard bloch)
	- various typos fixed (thanks to eduard bloch)
	- various crash fixes at mp3tag (thanks to eduard bloch)
	- various bad memory usage fixes mp3tag (thanks to eduard bloch)

20. Nov 2011 Christoph Thielecke <crissi99@gmx.de>
	- filecount at advanced disk catalog csv import fixed

09. Oct 2011 Christoph Thielecke <crissi99@gmx.de>
	- setting medianame from foldername if not cd/dvd at adding media fixed
	- size handling at scanning fixed