@@ -4,6 +4,7 @@
 	- repaint commwidget only if nessary
 	- qtlogo on tool button and menu entry fixed
 	- category display at commwidget fixed
+	- limited tag support at whereisit import (will be added to comment)
 
 03. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
 	- scanning archve files on subfolder fixed (#3484430)
